--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: ['bootstrap_5_layout.html.twig']
     globals :
          contact_company: 'Vente de Vetements'
          contact_address: '11 Boulevard Vicor Schoelcher'
