--- a/.env
+++ b/.env
@@ -43,7 +43,11 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-###> symfony/google-mailer ###
+### symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+###> stripe ###
+STRIPE_SK=null
+###< stripe ###
