--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "phpstan/phpdoc-parser": "^1.6",
         "rollerworks/password-strength-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "stripe/stripe-php": "^9.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
