--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -22,3 +22,7 @@ framework:
 
       # Route your messages to the transports
       # 'App\Message\YourMessage': async
+
+  mailer:
+    envelope:
+      recipients: ["willytalom@gmail.com"]
