--- a/.env
+++ b/.env
@@ -42,6 +42,7 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+CONTACT_EMAIL=""
 
 ### symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
