--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
+        "symfony/security-csrf": "6.1.*",
         "symfony/serializer": "6.1.*",
         "symfony/string": "6.1.*",
         "symfony/translation": "6.1.*",
@@ -48,7 +49,7 @@
         "symfony/validator": "6.1.*",
         "symfony/web-link": "6.1.*",
         "symfony/yaml": "6.1.*",
-        "symfonycasts/reset-password-bundle": "^1.16",
+        "symfonycasts/reset-password-bundle": "1.14.1",
         "symfonycasts/verify-email-bundle": "^1.11",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.4",
