--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,5 +1,5 @@
 framework:
   mailer:
     dsn: "%env(MAILER_DSN)%"
-    envelope:
-      recipients: ["willytalom@gmail.com"]
+    # envelope:
+    #   recipients: ["willytalom@gmail.com"]
