--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -16,13 +16,9 @@ framework:
       sync: "sync://"
 
     routing:
-      Symfony\Component\Mailer\Messenger\SendEmailMessage: async
-      Symfony\Component\Notifier\Message\ChatMessage: async
+      Symfony\Component\Mailer\Messenger\SendEmailMessage: sync
+      Symfony\Component\Notifier\Message\ChatMessage: sync
       Symfony\Component\Notifier\Message\SmsMessage: async
 
       # Route your messages to the transports
       # 'App\Message\YourMessage': async
-
-  mailer:
-    envelope:
-      recipients: ["willytalom@gmail.com"]
