--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,12 +2,15 @@ twig:
   default_path: "%kernel.project_dir%/templates"
   form_themes: ["bootstrap_5_layout.html.twig"]
   globals:
-    contact_company: "Vente de Vetements"
-    contact_address: "11 Boulevard Vicor Schoelcher"
+    contact_website: "https://projet.willy-talom.com/"
+    contact_company: "Vente de Vêtements"
+    contact_address: "11 Boulevard Victor Schoelcher"
     contact_zip: "77127"
     contact_city: "LIEUSAINT"
     contact_phone: "06 76 75 76 65"
-    contact_email: "vdv@domaine.com"
+    contact_email: "no.reply1234500@gmail.com"
+    contact_siret: "00000000"
+    contact_country: "France"
   paths:
     "public/img": images
 when@test:
